# sa-sdk-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
include/: sensors_analytics_sdk.h  sensors_network.h  sensors_utils.h
src/: sensors_analytics_sdk.cpp  sensors_network.cpp  sensors_utils.cpp
